--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ body {
     
 }
 
+.navigation {
+  font-weight: 600;
+}
+
 .navbar {
     background-image: linear-gradient(45deg, rgb(111, 214, 233), white, rgb(111, 214, 233));
 }
@@ -64,7 +68,6 @@ body {
     transform: translateY(-25px);
     box-shadow: 2px 2px 20px #2b2b2e;
 }
-
 
 .title {
     font-weight: 700;
